feat: batch service account lookups
