# internal/transport/http/server.go
@@ -88,6 +88,7 @@ func NewServer(lc fx.Lifecycle, cfg config.Config, handler *Handler, authService
 	api.POST("/identities/mfa/reset", handler.AdminResetMFA)
 	api.POST("/service-accounts/create", handler.CreateServiceAccount)
 	api.POST("/service-accounts/list", handler.ListServiceAccounts)
+	api.POST("/service-accounts/batch-get", handler.BatchGetServiceAccounts)
 	api.POST("/service-accounts/update-status", handler.UpdateServiceAccountStatus)
 	api.POST("/service-accounts/rotate-secret", handler.RotateServiceAccountSecret)
 	api.POST("/version", handler.Version)
